# Meta-x-Scalar

./: .gitignore  Dockerfile  README.md  baseline_results.json  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_agent.py  tasks.py
dashboard/: app.js  index.html  styles.css
server/: app.py  requirements.txt  ticket_triage_environment.py
tests/: test_environment.py
